--- a/style.css
+++ b/style.css
@@ -338,6 +338,7 @@ hr {
 }
 
 .menu-list {
+  list-style: none;
   border: none;
   background-color: transparent;
   color: #fff;
@@ -476,6 +477,7 @@ hr {
 
 .section-2 {
   padding: 10rem 0;
+  background-color: #fbfbfb;
 }
 
 .history-heading {
@@ -529,6 +531,7 @@ hr {
   transition: opacity 0.5 ease-in-out;
   padding-right: 2rem;
   position: relative;
+  z-index: 2;
 }
 
 .main-photo {
@@ -560,7 +563,7 @@ hr {
   color: #f1e8cf;
   font-family: "BrooklynSamuelsFive-Fat";
   font-weight: bold;
-  z-index: -9999;
+  z-index: -1;
 }
 
 .zero {
@@ -792,7 +795,7 @@ hr {
 }
 
 .service-heading {
-  font-size: 5.2rem;
+  font-size: 6.2rem;
   font-weight: 300;
 }
 
@@ -901,7 +904,7 @@ hr {
 
 .service-description {
   color: #595959;
-  font-size: 1.7rem;
+  font-size: 1.8rem;
   font-family: "BrooklynSamuelsFive-Light";
 }
 
@@ -931,15 +934,15 @@ hr {
 .winemaking-box {
   padding-top: 10.4rem;
   display: flex;
-  gap: 16rem;
+  gap: 10rem;
 }
 
 .winemaking-text {
-  width: 45%;
+  width: 60%;
 }
 
 .winemaking-title {
-  font-size: 6.2rem;
+  font-size: 6.4rem;
   color: #393939;
   font-family: "Baskerville";
   font-weight: 300;
@@ -949,12 +952,12 @@ hr {
 .winemaking-description {
   margin-top: 5.2rem;
   color: #595959;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-family: "AvenirNext-Regular";
 }
 
 .winemaking-photo {
-  max-width: 100%;
+  max-width: 115%;
   padding: 6.2rem;
   padding-bottom: 17.6rem;
   background-color: #fff;
@@ -969,7 +972,7 @@ hr {
   gap: 1rem;
   position: absolute;
   bottom: 10%;
-  left: 50%;
+  left: 58%;
   transform: translate(-50%, 0);
 }
 
@@ -1216,7 +1219,7 @@ footer {
   .top-photo {
     position: absolute;
     top: 20%;
-    transform: translate(20%, 2%) rotate(320deg);
+    transform: translate(45%, 2%) rotate(320deg);
     width: 13%;
   }
 
@@ -1230,9 +1233,41 @@ footer {
     width: 30%;
     transform: translate(44%, 39%) rotate(-9deg);
   }
+
+  .winemaking-description {
+    font-size: 1.6rem;
+  }
 }
 
 @media (max-width: 1200px) {
+  .center-photo {
+    top: 0%;
+    height: 45%;
+  }
+
+  .left-photo {
+    transform: rotate(7deg) translate(6%, 10%);
+    width: 35%;
+  }
+
+  .right-photo {
+    width: 35%;
+    transform: translate(60%, 10%) rotate(-9deg);
+  }
+
+  .top-photo {
+    transform: translate(36%, 0%) rotate(320deg);
+    width: 15%;
+  }
+
+  .setting-heading {
+    width: 80%;
+    padding-top: 5rem;
+  }
+
+  .setting-description {
+    width: 80%;
+  }
   .winemaking-photo {
     max-width: 115%;
   }
@@ -1391,7 +1426,7 @@ footer {
   }
 
   .setting-title {
-    transform: rotate(270deg) translate(-15%, 0%);
+    transform: rotate(270deg) translate(-20%, 0%);
   }
 
   .center-photo {
@@ -1433,17 +1468,17 @@ footer {
   }
 
   .winemaking-photo {
-    max-width: 85%;
-    padding-left: 10rem;
+    max-width: 95%;
+    padding-left: 5rem;
     padding-bottom: 10.6rem;
   }
 
   .winemaking-title {
-    font-size: 4.2rem;
+    font-size: 4.8rem;
   }
 
   .winemaking-description {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
   }
 
   .winemaking-text {
@@ -1459,19 +1494,18 @@ footer {
     padding-left: 9rem;
   }
 
-  .service-nav {
+  /* .service-nav {
     justify-content: space-around;
-  }
+  } */
 
   .winemaking-dots {
-    bottom: 13%;
+    bottom: 5%;
     left: 47%;
   }
-
   .cube3 {
     padding: 2rem;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+    font-size: 2rem;
+    margin-bottom: 13px;
   }
 
   .prev-next {
@@ -1527,6 +1561,7 @@ footer {
 
   .service-image-box {
     padding: 2.8rem;
+    width: 40%;
   }
 
   .service-description {
@@ -1534,11 +1569,15 @@ footer {
   }
 
   .service-number {
-    font-size: 5.4rem;
+    font-size: 6.4rem;
   }
 
   .service-title {
-    font-size: 1.8rem;
+    font-size: 2.4rem;
+  }
+
+  .span-elements {
+    margin-bottom: -2rem;
   }
 
   .service-details {
@@ -1600,7 +1639,7 @@ footer {
   }
 
   .setting-title {
-    transform: rotate(270deg) translate(-35%, -51%);
+    transform: rotate(270deg) translate(-44%, -51%);
   }
   .setting-photos {
     justify-content: center;
@@ -1642,10 +1681,11 @@ footer {
 
   .cube3 {
     padding: 2rem;
-    font-size: 1.5rem;
-    margin-bottom: 3.5rem;
+    font-size: 2rem;
+    margin-bottom: 3.7rem;
     margin-left: 1rem;
-    width: 83%;
+    width: 87%;
+    height: 42%;
   }
 
   .cube2 {
@@ -1912,6 +1952,7 @@ footer {
   .service-number {
     grid-column: 2/-1;
     color: #386741;
+    opacity: 1;
     font-size: 10rem;
     margin-top: 5rem;
   }
