--- a/style.css
+++ b/style.css
@@ -84,15 +84,6 @@ html {
   box-sizing: border-box;
 }
 
-/* h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Baskerville";
-} */
-
 ul {
   list-style: none;
 }
@@ -100,6 +91,10 @@ ul {
 ol,
 ul {
   padding-left: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 a:link,
@@ -1768,7 +1763,7 @@ footer {
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 1fr minxmax(auto, 60%) 1fr;
-    grid-column-gap: 1rem;
+    grid-column-gap: 0rem;
     width: 100%;
     margin: 0 auto;
     align-items: center;
@@ -1778,7 +1773,7 @@ footer {
 
   .card {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1789,8 +1784,10 @@ footer {
 
   .card img {
     width: 100%;
-    height: auto;
+    /* height: auto */
+    height: 380px;
     object-fit: cover;
+    /* transition: opacity 1s, transform 1s; */
   }
 
   .villa-1-photo,
@@ -1798,6 +1795,10 @@ footer {
   .villa-4-photo {
     max-width: 500px;
     height: 400px;
+  }
+
+  #villa-2 {
+    transform: scaleX(1.5);
   }
 
   .carousel-case-2::-webkit-scrollbar {
@@ -1858,7 +1859,7 @@ footer {
   }
 
   .section-4 {
-    padding-top: 75rem;
+    padding: 75rem 0 10rem 0;
     background-color: #f0f0f0;
   }
 
@@ -1870,6 +1871,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 7.6rem;
   }
 
   .arrows {
@@ -1902,6 +1904,7 @@ footer {
     width: 70%;
     padding: 2rem;
     justify-content: center;
+    margin: 0 auto;
   }
 
   .enquire {
@@ -1919,6 +1922,8 @@ footer {
 
   .century-text-box-case-2 {
     width: 70%;
+    margin: 0 auto;
+    padding: 7.6rem;
   }
 
   .th-century {
