--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@
   font-family: "AvenirNext-Medium";
   src: url("./fonts/AvenirNext-Medium.woff") format("woff2");
   src: url("./fonts/AvenirNext-Medium.woff2") format("woff2");
-  /*src: url("./fonts/AvenirNext-UltraLight.woff") format("woff2");
-  src: url("./fonts/AvenirNext-UltraLight.woff2") format("woff2"); */
   font-weight: normal;
   font-style: normal;
 }
@@ -72,6 +70,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 html {
   overflow-x: hidden;
   font-size: 62.5%;
@@ -103,6 +102,23 @@ a:visited {
   color: #fff;
 }
 
+.custom-animation {
+  transform: translate3d(0, 30px, 0);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.custom-fade .custom-animation {
+  transition: all 0.75s ease;
+  -webkit-transform: translateZ(0px);
+  transform: translateZ(0px);
+  opacity: 1;
+}
+
+.custom-fade .custom-animation {
+  transition-delay: 0.2s;
+}
+
 .btn {
   text-decoration: none;
   border: none;
@@ -110,7 +126,6 @@ a:visited {
   outline: none;
   font-size: 7.2rem;
   cursor: pointer;
-
   font-family: "Baskerville";
 }
 
@@ -122,6 +137,8 @@ a:visited {
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
 }
+
+/* **************************** SECTION 1 **************************** */
 
 .section-1 {
   height: 100vh;
@@ -352,7 +369,7 @@ hr {
 .menu-list::before,
 .menu-list::after {
   animation: change-color 1s ease-out;
-  transition: all 3s ease-out 3s; /* adds transition effect with 1s delay */
+  transition: all 3s ease-out 3s;
 }
 
 @keyframes change-color {
@@ -482,23 +499,6 @@ hr {
 }
 
 /* ********************  FADE ANIMATIONS ******************** */
-
-.custom-animation {
-  transform: translate3d(0, 30px, 0);
-  opacity: 0;
-  transition: all 1s ease;
-}
-
-.custom-fade .custom-animation {
-  transition: all 0.75s ease;
-  -webkit-transform: translateZ(0px);
-  transform: translateZ(0px);
-  opacity: 1;
-}
-
-.custom-fade .custom-animation {
-  transition-delay: 0.2s;
-}
 
 .history-text {
   color: #333;
@@ -737,8 +737,8 @@ hr {
 
 .century-villa {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns with equal width */
-  grid-template-rows: auto; /* 2 rows */
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
   gap: 2rem;
   height: 50vh;
   margin-top: 5.8rem;
@@ -782,7 +782,7 @@ hr {
 .enquire-container {
   display: flex;
   justify-content: flex-end;
-  width: 100%; /* set a width that suits your design */
+  width: 100%;
 }
 
 .enquire {
@@ -791,7 +791,6 @@ hr {
   color: #393939;
   font-family: "Baskerville";
   margin: 2.4rem 4.4rem 7.2rem 0;
-  /* margin-bottom: 7.2rem; */
 }
 
 /* SECTION-SERVICES */
@@ -816,7 +815,6 @@ hr {
 .service-box {
   margin-top: 5rem;
   display: flex;
-  /* justify-content: space-between; */
   width: 100%;
   gap: 12rem;
 }
@@ -851,15 +849,10 @@ hr {
 .list-hover-1,
 .list-hover-2,
 .list-hover-3 {
-  /* text-align: start; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
-
-/* .service-number:hover {
-  opacity: 1;
-} */
 
 .service-title-box {
   display: flex;
@@ -885,7 +878,6 @@ hr {
 
 .list-1 {
   grid-column: 1/3;
-  /* width: 40%; */
   width: 200px;
   display: flex;
   flex-direction: column;
@@ -895,7 +887,6 @@ hr {
 
 .list-2 {
   grid-column: 2/3;
-  /* width: 40%; */
   width: 200px;
   display: flex;
   flex-direction: column;
@@ -905,7 +896,6 @@ hr {
 
 .list-3 {
   grid-column: -1/-3;
-  /* width: 40%; */
   width: 200px;
   display: flex;
   flex-direction: column;
@@ -934,7 +924,6 @@ hr {
   outline: none;
   font-size: 2.4rem;
   cursor: pointer;
-
   font-family: "Baskerville";
 }
 
@@ -1196,7 +1185,7 @@ footer {
   /* color: #ff4234; */
 }
 
-/* MEDIA */
+/* **************************** MEDIA **************************** */
 
 .case-2 {
   display: none;
@@ -1508,10 +1497,6 @@ footer {
     padding-left: 9rem;
   }
 
-  /* .service-nav {
-    justify-content: space-around;
-  } */
-
   .winemaking-dots {
     bottom: 5%;
     left: 47%;
@@ -1792,7 +1777,6 @@ footer {
 
   .card {
     width: 100%;
-    /* height: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1803,10 +1787,8 @@ footer {
 
   .card img {
     width: 100%;
-    /* height: auto */
     height: 380px;
     object-fit: cover;
-    /* transition: opacity 1s, transform 1s; */
   }
 
   .villa-1-photo,
